--- a/myapp/index.html
+++ b/myapp/index.html
@@ -3,36 +3,37 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>My App</title>
+  <title>Kiwi</title>
 
   <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
   <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">My App</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Kiwi</a>
     </div>
   </nav>
 
   <div class="container">
     <div class="section">
 
-      <h4>Console</h4>
-      <div id="divConsole">
-      	None
+      <div id="divSensor" class="center-align">
+        <h4>Welcome</h4>
+        <h6>Go to the indicated position to get started!</h6>
       </div>
 
-      <h4>Product</h4>
-      <div id="divProduct">
-        None
+      <div id="divDirections" class="center-align">
       </div>
+
+      <div id="divProduct">
+      </div>
+
     </div>
     <br><br>
 
     <div class="section">
-
     </div>
   </div>
 
@@ -56,10 +57,12 @@
   		hasSomeone = personData.hasSomeone
 
   		if (hasSomeone == true) {
-  			$("#divConsole").html("<div class='row'> <div class='col s12 m6'> <div class='card blue-grey darken-1'> <div class='card-content white-text'> <span class='card-title'>There is someone!</span> <p>Looks like there is someone at the sensor.</p> </div> </div> </div> </div>");
+  			$("#divSensor").html("");
+        $("#divDirections").html("<h4>Directions</h4> <h6>Please aim to the desired product you wish to know more.</h6>");
   		}
   		else {
-  			$("#divConsole").html("None");
+  			$("#divSensor").html("<h4>Welcome</h4> <h6>Go to the indicated position to get started!</h6>");
+        $("#divDirections").html("");
   		}
 
   	});
@@ -68,8 +71,11 @@
   	socket.on('productEvent', function(productData) {
 
       if (productData != null) {
-        $("#divProduct").html("<div class='row'> <div class='col s12 m6'> <div class='card blue-grey darken-1'> <div class='card-content white-text'> <span class='card-title'>Product</span> <p> "+ productData.name + "</p> </div> </div> </div> </div>");
+        $("#divProduct").html(" <div class='row'> <div class='col s12 m7'> <div class='card'> <div class='card-image'> <img src='images/" + productData.photoName + "'> <span class='card-title'>"+ productData.name + "</span> </div> <div class='card-content'> <p>" + productData.description + "</p> </div> <div class='card-action'> <a href='#'>BUY</a> </div> </div> </div> </div>");
+      } else {
+        $("#divProduct").html("");
       }
+
   		
   	});
 
@@ -79,6 +85,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
+            
 
 </body>
 </html>
